Remove buttons from anchor links

--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -27,8 +27,8 @@
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Update</button>
-                    <a href="{% url 'blogs' %}" aria-label="Link to cancel edit blog form">
-                        <button class="btn btn-grey" type="button">Cancel</button>
+                    <a href="{% url 'blogs' %}" class="btn btn-grey" aria-label="Link to cancel edit blog form">
+                        Cancel
                     </a>
                 </div>
             </form>
