--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -29,8 +29,8 @@
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
-                    <a href="{% url 'blogs' %}" aria-label="Link to cancel add product form">
-                        <button class="btn btn-grey" type="button">Cancel</button>
+                    <a href="{% url 'blogs' %}" class="btn btn-grey" aria-label="Link to cancel add product form">
+                        Cancel
                     </a>
                 </div>
             </form>
