Remove buttons from anchor links

--- a/reviews/templates/reviews/create_review.html
+++ b/reviews/templates/reviews/create_review.html
@@ -24,8 +24,8 @@
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
-                    <a href="{% url 'product_detail' product.id %}" aria-label="Link to product detail page">
-                        <button class="btn btn-grey" type="button">Cancel</button>
+                    <a href="{% url 'product_detail' product.id %}" class="btn btn-grey" aria-label="Link to product detail page">
+                        Cancel
                     </a>
                 </div>
             </form>
