--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -17,8 +17,8 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn btn-blue" type="submit" value="{% trans 'Reset My Password' %}" />
-        <a class="btn btn-grey" href="{% url 'account_login' %}">Back to Login</a>
+        <input class="btn btn-blue action-buttons" type="submit" value="{% trans 'Reset My Password' %}" />
+        <a class="btn btn-grey action-buttons" href="{% url 'account_login' %}">Back to Login</a>
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
