--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -7,7 +7,7 @@
 {% block inner_content %}
 <h2 class="text-center">{% trans "Register" %}</h2>
 
-<p class="text-center">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p class="text-center">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">login</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
