Hide blog id from delete modal

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -34,6 +34,10 @@
     height: 120px;
 }
 
+#postId {
+    display: none !important;
+}
+
 /* Media queries */
 @media (max-width: 425px) {
    .blog-img-container {
