--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -81,8 +81,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p class="text-center">Are you sure you want to delete this blog? (ID: <span
-                                id="postId"></span>)</p>
+                        <p class="text-center">Are you sure you want to delete this blog? <span id="postId"></span></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-sm btn-grey" data-bs-dismiss="modal">Cancel</button>
