Hide postId and reviewId from user

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -27,3 +27,8 @@ a .card-title {
     color: #2f7deb !important;
     text-decoration: underline;
 }
+
+#reviewId,
+#productId {
+    display: none;
+}
