--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -256,8 +256,7 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <p class="text-center">Are you sure you want to delete this review? (ID:<span
-                                            id="reviewId"></span>)</p>
+                                    <p class="text-center">Are you sure you want to delete this review? <span id="reviewId"></span></p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-sm btn-grey"
