--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -123,8 +123,7 @@
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p class="text-center">Are you sure you want to delete this product?
-                                    (ID:<span id="productId"></span>)
+                                <p class="text-center">Are you sure you want to delete this product? <span id="productId"></span>
                                 </p>
                             </div>
                             <div class="modal-footer">
