--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -133,46 +133,45 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                 <!-- Deletion confirmation Bootstrap modal -->
-                 <div class="modal fade" id="deleteComment" tabindex="-1"
-                 aria-labelledby="postId" aria-hidden="true">
-                 <div class="modal-dialog modal-dialog-centered">
-                     <div class="modal-content">
-                         <div class="modal-header">
-                             <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                 aria-label="Close"></button>
-                         </div>
-                         <div class="modal-body">
-                             <p class="text-center">Are you sure you want to delete this comment?
-                                <span id="postId"></span>
-                             </p>
-                         </div>
-                         <div class="modal-footer">
-                             <button type="button" class="btn btn-sm btn-grey"
-                                 data-bs-dismiss="modal">Cancel</button>
-                             <a href="" id="actualDeleteBtn" class="btn btn-sm btn-danger" aria-label="Link to delete comment">
-                                Delete
-                             </a>
-                         </div>
-                     </div>
-                 </div>
-             </div>
+                <!--Deletion confirmation Bootstrap modal-->
+                <div class="modal fade" id="deleteComment" tabindex="-1" aria-labelledby="blogId" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p class="text-center">Are you sure you want to delete this review? <span id="postId"></span></p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-grey"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <a href="" id="actualDeleteBtn" class="btn btn-sm btn-danger"
+                                    aria-label="Link to delete review">
+                                    Delete
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-5">
             <!-- Comment form displayed if user has not left previous comment on this blog -->
             {% if not previous_comment %}
-            {% if user.is_authenticated %}
-            <form action="{% url 'blog_detail' blog.id %}" method="POST">
-                {% csrf_token %}
-                {{ comment_form|crispy }}
-                <div class="text-center">
-                    <button class="btn btn-blue" type="submit" >Add comment</button>
-                    <a href="{% url 'blog_detail' blog.id %}" class="btn btn-grey"  aria-label="Link to cancel comment form">
-                        Cancel
-                </div>
-            </form>
-            {% endif %}
+                {% if user.is_authenticated %}
+                    <form action="{% url 'blog_detail' blog.id %}" method="POST">
+                        {% csrf_token %}
+                        {{ comment_form|crispy }}
+                        <div class="text-center">
+                            <button class="btn btn-blue" type="submit" >Add comment</button>
+                            <a href="{% url 'blog_detail' blog.id %}" class="btn btn-grey" aria-label="Link to cancel add comment form">
+                                Cancel
+                            </a>
+                        </div>
+                    </form>
+                {% endif %}
             {% endif %}
         </div>
     </div>
