--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="container">
-        <!-- Image gallery -->
+        <!-- Image gallery modified from W3 Schools and Shore, details in README-->
         <div class="row gallery">
             <div class="col-6 offset-1 image-container">
                 <a href="{% url 'products' %}?category=surfboards,surf_equipment" aria-label="Link to products page">
