Amend logo size and nav margins on smaller screens

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
         <div class="row">
             <nav class="navbar navbar-light navbar-expand-lg">
                 <a href="{% url 'home' %}" aria-label="Link to home page" class="d-lg-none">
-                    <p class="logo">Surf the Wave</p>
+                    <p class="mb-0 mt-0 logo">Surf the Wave</p>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
