Fix aria-labelledby from HTML validation

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -134,7 +134,7 @@
                     </tbody>
                 </table>
                 <!--Deletion confirmation Bootstrap modal-->
-                <div class="modal fade" id="deleteComment" tabindex="-1" aria-labelledby="blogId" aria-hidden="true">
+                <div class="modal fade" id="deleteComment" tabindex="-1" aria-labelledby="postId" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
